@@ -3913,6 +3913,7 @@ GEN     lfungenus2(GEN PS);
 GEN     lfunmfspec(GEN lmisc, long bitprec);
 GEN     lfunmul(GEN ldata1, GEN ldata2, long bitprec);
 GEN     lfunqf(GEN ldata, long prec);
+GEN     lfunsympow(GEN E, ulong m);
 GEN     lfunzetakinit(GEN pol, GEN dom, long der, long flag, long bitprec);
 long    qf_iseven(GEN M);
 
