@@ -409,4 +409,28 @@
 32 (lfuntheta): 0.79138040414598215782025151996013400677 - 0.693572792187828
 34814370540240036393563*I
 32 (lfunan): [1, -2*I, I, -2, 0, 2, -2*I, 0, 2, 0]
-Total time spent: 2092
+33 (lfun(2+2*I)): 1.5440136714872304773986991780907589211 - 0.30661960725519
+029288002589339018937061*I
+33 (lfun): 1.0575992445909578493475116523231674725
+33 (lfuncreate): 1.0575992445909578493475116523231674725
+33 (lfunderiv): -0.40874788643585924772279469406166841139
+33 (lfunlambda): 2.0636065064337882642106195341697561190
+33 (lfunderivlambda): 1.5118482678149543000643643698970410347
+33 (lfuncheckfeq): -124
+33 (lfunhardy): 2.5141116494240547692059934356337208455
+33 (lfunorderzero): 0
+33 (lfuntheta): 0.23289067751256198570325301650715050859
+33 (lfunan): [1, 2, -2, 0, -4, -4, -3, 0, 10, -8]
+34 (lfun(2+2*I)): 0.30340585010904366530335696337431398948 - 0.8007738353880
+8323710294579089327329218*I
+34 (lfun): 1.1402308683647332165019665302206510242
+34 (lfuncreate): 1.1402308683647332165019665302206510242
+34 (lfunderiv): -1.1167497502735277462260515370661007526
+34 (lfunlambda): 24.473226847609759135198967167899023747
+34 (lfunderivlambda): 30.738683436715312670539707545652132287
+34 (lfuncheckfeq): -124
+34 (lfunhardy): 2.7897642304056560145420743528588027342
+34 (lfunorderzero): 0
+34 (lfuntheta): 1.7720013953042806303430908084396944474
+34 (lfunan): [1, 0, 5, 0, -9, 0, 20, 0, -5, 0]
+Total time spent: 3068
