@@ -44,7 +44,9 @@ lfunqf(matdiagonal([1,2,3,4])),
 ellinit([0,2,1,-19-8*a,28+11*a],K3)),
   if(1,my(E=ellinit([0,-1,1,-10,-20])); \\11a1
 lfuncreate([n->my(V=ellan(E,n));vector(n,i,V[i]/sqrt(i)),0,[1/2,3/2],1,11,1])),
-lfuntwist(E, Mod(2,5))
+lfuntwist(E, Mod(2,5)),
+lfunsympow(E,2),
+lfunsympow(E,3)
 ];
 }
 
